Expose pending approval changes
